--- a/css/index.css
+++ b/css/index.css
@@ -586,7 +586,111 @@ body {
     .wrapper5 .section .section2 {
       height: 20%;
       margin: 0 20px 50px 20px;
-      background-color: rgba(15, 23, 37, 0.72); }
+      background-color: rgba(15, 23, 37, 0.72);
+      display: flex;
+      flex-direction: column;
+      color: #fff; }
+      .wrapper5 .section .section2 .s2p1 {
+        height: 22%;
+        font-size: 42px;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+      .wrapper5 .section .section2 .s2p2 {
+        height: 20%;
+        font-size: 38px;
+        display: flex;
+        align-items: center;
+        justify-content: center; }
+        .wrapper5 .section .section2 .s2p2 span {
+          box-shadow: inset 0px 0px 5px 5px rgba(43, 58, 96, 0.8);
+          padding: 5px 50px;
+          border-radius: 10px; }
+      .wrapper5 .section .section2 .s2p3 {
+        height: 18%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 33px; }
+        .wrapper5 .section .section2 .s2p3 .info1 {
+          width: 166px;
+          height: 80%;
+          position: relative;
+          left: -20px;
+          top: 50%;
+          border-radius: 10px;
+          padding: 5px 50px;
+          background-color: #2c56fe;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+        .wrapper5 .section .section2 .s2p3 .line1 {
+          width: 200px;
+          height: 100%;
+          border-right: 3px solid #3f434d;
+          border-bottom: 3px solid #3f434d; }
+        .wrapper5 .section .section2 .s2p3 .line2 {
+          width: 110px; }
+        .wrapper5 .section .section2 .s2p3 .line3 {
+          width: 200px;
+          height: 100%;
+          border-left: 3px solid #3f434d;
+          border-bottom: 3px solid #3f434d;
+          position: relative; }
+          .wrapper5 .section .section2 .s2p3 .line3 .extraInfo {
+            position: absolute;
+            background-color: #3f434d;
+            border-radius: 10px;
+            font-size: 25px;
+            padding: 5px 10px;
+            left: -10%;
+            bottom: -30%; }
+        .wrapper5 .section .section2 .s2p3 .info2 {
+          width: 166px;
+          height: 80%;
+          position: relative;
+          left: 20px;
+          top: 50%;
+          border-radius: 10px;
+          padding: 0px 50px;
+          white-space: nowrap;
+          background-color: #2c56fe;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+      .wrapper5 .section .section2 .s2p4 {
+        height: 18%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 33px; }
+        .wrapper5 .section .section2 .s2p4 .info1 {
+          width: 166px; }
+        .wrapper5 .section .section2 .s2p4 .line1 {
+          width: 60px;
+          height: 100%; }
+        .wrapper5 .section .section2 .s2p4 .line2 {
+          width: 390px; }
+        .wrapper5 .section .section2 .s2p4 .line3 {
+          width: 60px;
+          height: 100%;
+          border-left: 3px solid #3f434d;
+          border-bottom: 3px solid #3f434d; }
+        .wrapper5 .section .section2 .s2p4 .info2 {
+          width: 166px;
+          height: 80%;
+          white-space: nowrap;
+          position: relative;
+          left: 20px;
+          top: 50%;
+          border-radius: 10px;
+          padding: 0px 50px;
+          background-color: #2c56fe;
+          display: flex;
+          align-items: center;
+          justify-content: center; }
+      .wrapper5 .section .section2 .s2p5 {
+        height: 22%; }
     .wrapper5 .section .section3 {
       height: 50%;
       margin: 0 20px;
