--- a/scss/index.scss
+++ b/scss/index.scss
@@ -739,6 +739,129 @@ body {
             height: 20%;
             margin: 0 20px 50px 20px;
             background-color: rgba($color: #0f1725, $alpha: 0.72);
+            display: flex;
+            flex-direction: column;
+            color: #fff;
+            .s2p1 {
+                height: 22%;
+                font-size: 42px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+            }
+            .s2p2 {
+                height: 20%;
+                font-size: 38px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                span {
+                    box-shadow: inset 0px 0px 5px 5px rgba(43, 58, 96, 0.8);
+                    padding: 5px 50px;
+                    border-radius: 10px;
+                }
+            }
+            .s2p3 {
+                height: 18%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 33px;
+                .info1 {
+                    width: 166px;
+                    height: 80%;
+                    position: relative;
+                    left: -20px;
+                    top: 50%;
+                    border-radius: 10px;
+                    padding: 5px 50px;
+                    background-color: #2c56fe;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+                .line1 {
+                    width: 200px;
+                    height: 100%;
+                    border-right: 3px solid #3f434d;
+                    border-bottom: 3px solid #3f434d;
+                }
+                .line2 {
+                    width: 110px;
+                }
+                .line3 {
+                    width: 200px;
+                    height: 100%;
+                    border-left: 3px solid #3f434d;
+                    border-bottom: 3px solid #3f434d;
+                    position: relative;
+                    .extraInfo {
+                        position: absolute;
+                        background-color: #3f434d;
+                        border-radius: 10px;
+                        font-size: 25px;
+                        padding: 5px 10px;
+                        left: -10%;
+                        bottom: -30%;
+                    }
+                }
+                .info2 {
+                    width: 166px;
+                    height: 80%;
+                    position: relative;
+                    left: 20px;
+                    top: 50%;
+                    border-radius: 10px;
+                    padding: 0px 50px;
+                    white-space: nowrap;
+                    background-color: #2c56fe;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+            .s2p4 {
+                height: 18%;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                font-size: 33px;
+                .info1 {
+                    width: 166px;
+                }
+                .line1 {
+                    width: 60px;
+                    height: 100%;
+                }
+                .line2 {
+                    width: 390px;
+                }
+                .line3 {
+                    width: 60px;
+                    height: 100%;
+                    border-left: 3px solid #3f434d;
+                    border-bottom: 3px solid #3f434d;
+                }
+                .info2 {
+                    width: 166px;
+                    height: 80%;
+                    white-space: nowrap;
+                    position: relative;
+                    left: 20px;
+                    top: 50%;
+                    border-radius: 10px;
+                    padding: 0px 50px;
+                    background-color: #2c56fe;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                }
+            }
+
+            .s2p5 {
+                height: 22%;
+                // border: 3px solid red;
+            }
         }
 
         .section3 {
